# otter-maroon

./: .gitignore  Dockerfile  Procfile  README.md  app.py  env.template  gunicorn_config.py  horoscope-api.json  horoscope.py  main.py  newsapi_org_top-headlines.json  newsdata_io_latest.json  pyproject.toml  requirements.txt  use-moonshot.sh
.windsurf/rules/: python.md
horoscope/: horoscope.py
src/: main.py
src/horoscope/: horoscope.py
templates/: index.html
